cmake_minimum_required(VERSION 3.16)
project(ipcbench LANGUAGES C CXX)

# -------------------------
# Enforce out-of-source build
# -------------------------
if (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
  message(FATAL_ERROR
    "In-source builds are not allowed.\n"
    "Use:\n"
    "  cmake -S ${CMAKE_SOURCE_DIR} -B ${CMAKE_SOURCE_DIR}/build\n"
    "  cmake --build ${CMAKE_SOURCE_DIR}/build\n")
endif()

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# -------------------------
# Repo layout paths
# -------------------------
set(REPO_ROOT            ${CMAKE_SOURCE_DIR})
set(SRC_ROOT             ${REPO_ROOT}/src)

set(APP_INC_DIR          ${SRC_ROOT}/app/include)
set(APP_SRC_DIR          ${SRC_ROOT}/app/src)

set(SHIM_INC_DIR         ${SRC_ROOT}/shim/include)
set(SHIM_SRC_DIR         ${SRC_ROOT}/shim/src)

set(IDL_DIR              ${SRC_ROOT}/idl)

# -------------------------
# Options
# -------------------------
option(IPC_USE_FASTDDS        "Enable Fast DDS backend" ON)
option(IPC_USE_PPS            "Enable QNX PPS backend (QNX only)" OFF)
option(FD_SHIM_USE_WAITSET    "Fast DDS shim: WaitSet (else Polling)" ON)

# If you still see __gxx_personality_v0 on QNX, turn this ON.
option(QNX_LINK_GCC_S         "On QNX, also link libgcc_s for unwind personality symbols" OFF)

# -------------------------
# IDL selection + generated output directory layout
# -------------------------
set(IDL_FILE "${IDL_DIR}/Hello.idl" CACHE FILEPATH "IDL file to generate Fast DDS types from")
get_filename_component(IDL_FILE_ABS  "${IDL_FILE}" ABSOLUTE)
get_filename_component(IDL_FILE_BASE "${IDL_FILE}" NAME_WE)

set(GENERATED_BASE_DIR "${REPO_ROOT}/generated")
set(GENERATED_DIR      "${GENERATED_BASE_DIR}/${IDL_FILE_BASE}")

set(GENERATED_IDL_DIR_DEFAULT "${GENERATED_DIR}/src/idl")

set(IPCBENCH_GENERATED_IDL_DIR "${GENERATED_IDL_DIR_DEFAULT}" CACHE PATH
    "Directory containing generated IDL headers/sources (e.g. generated/Hello/src/idl)")

set(IPCBENCH_GEN_BASENAME "${IDL_FILE_BASE}" CACHE STRING
    "Basename of generated files (e.g. Hello for Hello.hpp/HelloPubSubTypes.hpp)")

file(MAKE_DIRECTORY "${IPCBENCH_GENERATED_IDL_DIR}")

# -------------------------
# Fast-DDS-Gen integration
# -------------------------
find_program(FASTDDSGEN_EXE NAMES fastddsgen fastrtpsgen)
file(GLOB GEN_CXX_SOURCES "${IPCBENCH_GENERATED_IDL_DIR}/*.cxx")

set(_NEED_GEN OFF)
if(NOT GEN_CXX_SOURCES)
  set(_NEED_GEN ON)
endif()

if (IPC_USE_FASTDDS AND _NEED_GEN)
  if (NOT FASTDDSGEN_EXE)
    message(FATAL_ERROR
      "IPC_USE_FASTDDS=ON but generated IDL files are missing and no Fast DDS IDL generator was found.\n"
      "Expected generated sources under:\n"
      "  ${IPCBENCH_GENERATED_IDL_DIR}\n"
      "\n"
      "Fix:\n"
      "  1) Run: ./scripts/gen_idl.sh ${IDL_FILE}\n"
      "     (recommended for cross builds), OR\n"
      "  2) Put fastddsgen on PATH: export PATH=~/Fast-DDS-Gen/scripts:$PATH\n")
  endif()

  add_custom_target(generate_idl
    COMMAND ${CMAKE_COMMAND} -E make_directory "${GENERATED_DIR}"
    COMMAND ${FASTDDSGEN_EXE} -d "${GENERATED_DIR}" "${IDL_FILE_ABS}"
    COMMENT "Generating Fast DDS types from ${IDL_FILE_ABS} into ${GENERATED_DIR}"
    VERBATIM
  )
else()
  add_custom_target(generate_idl)
endif()

file(GLOB GEN_CXX_SOURCES "${IPCBENCH_GENERATED_IDL_DIR}/*.cxx")

# -------------------------
# Generate wrapper headers (future-proof includes)
# -------------------------
set(WRAP_DIR "${CMAKE_BINARY_DIR}/generated_include")
file(MAKE_DIRECTORY "${WRAP_DIR}")

set(WRAP_IDL_HPP     "${WRAP_DIR}/ipcbench_idl.hpp")
set(WRAP_PUBSUB_HPP  "${WRAP_DIR}/ipcbench_idl_pubsub.hpp")

file(WRITE "${WRAP_IDL_HPP}"
"#pragma once\n"
"// Auto-generated by CMake. Do not edit.\n"
"#include \"${IPCBENCH_GEN_BASENAME}.hpp\"\n"
)

file(WRITE "${WRAP_PUBSUB_HPP}"
"#pragma once\n"
"// Auto-generated by CMake. Do not edit.\n"
"#include \"${IPCBENCH_GEN_BASENAME}PubSubTypes.hpp\"\n"
)

# -------------------------
# Common sources for apps
# -------------------------
add_executable(sender
  ${APP_SRC_DIR}/sender.c
)
add_executable(receiver
  ${APP_SRC_DIR}/receiver.c
)

target_include_directories(sender PRIVATE ${APP_INC_DIR})
target_include_directories(receiver PRIVATE ${APP_INC_DIR})

# IMPORTANT: These are C sources, but must link as C++ because they link against C++ libs.
set_target_properties(sender receiver PROPERTIES LINKER_LANGUAGE CXX)

# -------------------------
# Backend selection
# -------------------------
add_library(ipc_backend_obj OBJECT)
target_include_directories(ipc_backend_obj PRIVATE
  ${APP_INC_DIR}
  ${SHIM_INC_DIR}
)

if (IPC_USE_FASTDDS)
  add_compile_definitions(IPC_BACKEND_FASTDDS=1)

  find_package(fastdds REQUIRED)
  find_package(fastcdr REQUIRED)

  add_library(fastdds_ipc_shim SHARED
    ${SHIM_INC_DIR}/fastdds_ipc.h
    ${GEN_CXX_SOURCES}
  )

  add_dependencies(fastdds_ipc_shim generate_idl)

  if (FD_SHIM_USE_WAITSET)
    target_sources(fastdds_ipc_shim PRIVATE ${SHIM_SRC_DIR}/fastdds_ipc_waitset.cpp)
    target_compile_definitions(fastdds_ipc_shim PRIVATE FD_SHIM_WAITSET=1)
  else()
    target_sources(fastdds_ipc_shim PRIVATE ${SHIM_SRC_DIR}/fastdds_ipc_polling.cpp)
    target_compile_definitions(fastdds_ipc_shim PRIVATE FD_SHIM_POLLING=1)
  endif()

  target_include_directories(fastdds_ipc_shim PUBLIC
    ${SHIM_INC_DIR}
    ${APP_INC_DIR}
    ${WRAP_DIR}
    ${IPCBENCH_GENERATED_IDL_DIR}
  )

  target_link_libraries(fastdds_ipc_shim PRIVATE fastdds fastcdr)

  # QNX: explicitly link C++ runtime + math (fixes std::__1, __cxa_*, log10f, etc.)
if (CMAKE_SYSTEM_NAME STREQUAL "QNX")
  target_link_libraries(fastdds_ipc_shim PUBLIC c++ m)
  if (QNX_LINK_GCC_S)
    target_link_libraries(fastdds_ipc_shim PUBLIC gcc_s)
  endif()
endif()

  target_sources(ipc_backend_obj PRIVATE ${APP_SRC_DIR}/ipc_backend_fastdds.c)

  target_link_libraries(sender PRIVATE fastdds_ipc_shim)
  target_link_libraries(receiver PRIVATE fastdds_ipc_shim)

  # QNX: also link runtime libs to executables explicitly (belt-and-suspenders)
if (CMAKE_SYSTEM_NAME STREQUAL "QNX")
  target_link_libraries(sender   PRIVATE c++ m)
  target_link_libraries(receiver PRIVATE c++ m)
  if (QNX_LINK_GCC_S)
    target_link_libraries(sender   PRIVATE gcc_s)
    target_link_libraries(receiver PRIVATE gcc_s)
  endif()
endif()

elseif (IPC_USE_PPS)
  add_compile_definitions(IPC_BACKEND_PPS=1)
  target_sources(ipc_backend_obj PRIVATE ${APP_SRC_DIR}/ipc_backend_pps.c)

else()
  message(FATAL_ERROR "Enable either IPC_USE_FASTDDS or IPC_USE_PPS")
endif()

target_sources(sender PRIVATE $<TARGET_OBJECTS:ipc_backend_obj>)
target_sources(receiver PRIVATE $<TARGET_OBJECTS:ipc_backend_obj>)

set_target_properties(sender receiver PROPERTIES BUILD_RPATH "\$ORIGIN")

# -------------------------
# install layout
# -------------------------
install(TARGETS sender receiver fastdds_ipc_shim
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib)

install(FILES fastdds_profiles.xml DESTINATION .)
